tests/typing/bad/testfile-comparison-4.c

union S { int a; };
int main() { union S s1, s2; s1 != s2; }
